# rq-library

./: .gitignore  ARCHITECTURE_REVIEW.md  CallTree.md  Cargo.toml  README.md  RQ redesign.md  RQ_REDESIGN.md  TEST_PLAN.md  build.rs  build_all.sh  build_android.sh  build_emscripten.sh  build_ios.sh  build_linux.sh  build_macos.sh  build_wasm_browser.sh  build_windows.ps1  cbindgen.toml  go.mod  raptorq.go  raptorq_test.go  test-strategy.md  wasm-browser.md
.cargo/: config.toml  zig-cc
.github/workflows/: sync-rq-go.yml
benches/: rq_benchmarks.rs
bindings/go/: README.md  go.mod  raptorq.go  raptorq_test.go
bindings/lib/: README.md
bindings/lib/darwin/amd64/: librq_library.rlib
docs/: ARCHITECTURE_FILE_IO_TRAITS.md  RQ_LIBRARY_OVERVIEW.md  wasm-browser.md
examples/js/browser/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
include/: rq-library.h
js/: browser_fs_mem.js  in-browser-storages.md
src/: file_io.rs  lib.rs  platform.rs  processor.rs  wasm_browser.rs
src/file_io/: native.rs  wasm.rs
test-client/: README.md  go.mod  main.go
tests/: file_io_tests.rs  file_reader_tests.rs  system_tests.rs
