[package]
name = "rq-library"
version = "0.1.0"
edition = "2024"

[lib]
name = "rq_library"
# Flexible crate types to support different targets
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
raptorq = "2.0.0"
sha3 = "0.11.0-pre.5"
bs58 = "0.5.1"
thiserror = "2.0.12"
parking_lot = "0.12.3"
once_cell = "1.21.3"
log = "0.4.27"
env_logger = "0.11.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1.8.1"

# WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1.7"
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true, features = [
    "File", "Blob", "FileReader", "FileList", "console"
]}
getrandom = { version = "0.2", features = ["js"], optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }

[features]
default = []
browser-wasm = ["js-sys", "web-sys", "wasm-bindgen-futures", "getrandom"]

[dev-dependencies]
rq-library = { path = "." }
rand = "0.8.5"
tempfile = "3.10.1"
criterion = "0.5"
allocation-counter = "0.8.1"

[[bench]]
name = "rq_benchmarks"
harness = false

[profile.bench]
debug = true

[build-dependencies]
cbindgen = "0.28.0"
